[package]
name = "pallet-kitties"
version = "0.1.0"
authors = ["Bryan Chen"]
edition = "2018"

[dependencies]
serde = { version = "1.0.101", optional = true, features = ["derive"] }
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false }

frame-support = { version = "3.0.0", default-features = false }
frame-system = { version = "3.0.0", default-features = false }
sp-io = { version = "3.0.0", default-features = false }
sp-std = { version = "3.0.0", default-features = false }
sp-runtime = { version = "3.0.0", default-features = false }

orml-nft = { version = "0.4.0", default-features = false }
orml-utilities = { version = "0.4.0", default-features = false }

frame-benchmarking = { version = "3.1.0", default-features = false, optional = true }

[dev-dependencies]
sp-core = { version = "3.0.0" }
pallet-balances = { version = "3.0.0" }

[features]
default = ["std"]
std = [
	"serde",
    "codec/std",
    "frame-support/std",
    "frame-system/std",
    "sp-io/std",
    "sp-std/std",
    "sp-runtime/std",
    "orml-nft/std",
    "orml-utilities/std",
]
runtime-benchmarks = [
	"frame-benchmarking",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
]
